fix: fix overflow

--- a/sass/component/demo.scss
+++ b/sass/component/demo.scss
@@ -75,6 +75,9 @@
     @include media-mobile {
         width: 100%;
     }
+
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .btn-wrapper {
