--- a/sass/component/modal.scss
+++ b/sass/component/modal.scss
@@ -5,6 +5,9 @@
     bottom: 0;
     right: 0;
     left: 0;
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     width: 100%;
     height: 100%;
     // display: flex;
